// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 light font 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 2.25rem;
  font-weight: lighter;
}

<h2
  className="c0"
>
  Lorem Ipsum
</h2>
`;

exports[`H2 renders correctly 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 2.25rem;
  font-weight: bold;
}

<h2
  className="c0"
>
  Lorem Ipsum
</h2>
`;
